# BitcoinQrDecoder

./: Cargo.toml
src/: lib.rs  main.rs  qr.rs  specter.rs  ur.rs
